* Try at solving bug #6036; similar to Linux, we now try to cut down the   capacity by trying to read at the end of the medium. * Not tested at all yet.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36989 a95241bf-73f2-0310-859d-f6bbb57e9c96